--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="container"></div>
     <p>
         <input type="text" id="inputtt" placeholder="Add here">
+
+        <input type="checkbox" id="check">
         
         <button  id="btn">Add
         </button>
